--- a/seogram/html/index.html
+++ b/seogram/html/index.html
@@ -8,7 +8,7 @@
 
   <meta name="copyright" content="MACode ID, https://macodeid.com/">
 
-  <title>SeoGram - SEO Agency Template</title>
+  <title>Mister B - Backlinks for SEO strategies</title>
 
   <link rel="stylesheet" href="../assets/css/maicons.css">
 
@@ -27,7 +27,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky" data-offset="500">
       <div class="container">
-        <a href="#" class="navbar-brand">Seo<span class="text-primary">Gram.</span></a>
+        <a href="#" class="navbar-brand">Mister<span class="text-primary">B.</span></a>
 
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
