--- a/seogram/html/index.html
+++ b/seogram/html/index.html
@@ -63,8 +63,8 @@
       <div class="page-banner home-banner">
         <div class="row align-items-center flex-wrap-reverse h-100">
           <div class="col-md-6 py-5 wow fadeInLeft">
-            <h1 class="mb-4">Let's Check and Optimize your website!</h1>
-            <p class="text-lg text-grey mb-5">Ignite the most powerfull growth engine you have ever built for your company</p>
+            <h1 class="mb-4">Let's Build your Backlinks Strategy together!</h1>
+            <p class="text-lg text-grey mb-5">And receive the most powered organic traffic of your Region/Country </p>
             <a href="#" class="btn btn-primary btn-split">Watch Video <div class="fab"><span class="mai-play"></span></div></a>
           </div>
           <div class="col-md-6 py-5 wow zoomIn">
@@ -87,8 +87,8 @@
               <img src="../assets/img/services/service-1.svg" alt="">
             </div>
             <div class="body">
-              <h5 class="text-secondary">SEO Consultancy</h5>
-              <p>We help you define your SEO objective & develop a realistic strategy with you</p>
+              <h5 class="text-secondary">Backlinks</h5>
+              <p>We help you to connect the </p>
               <a href="service.html" class="btn btn-primary">Read More</a>
             </div>
           </div>
@@ -100,7 +100,7 @@
             </div>
             <div class="body">
               <h5 class="text-secondary">Content Marketing</h5>
-              <p>We help you define your SEO objective & develop a realistic strategy with you</p>
+              <p>we help you build your backlinks strategy while respecting Google's vigilance criteria</p>
               <a href="service.html" class="btn btn-primary">Read More</a>
             </div>
           </div>
