--- a/seogram/html/index.html
+++ b/seogram/html/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="body">
               <h5 class="text-secondary">Backlinks</h5>
-              <p>We help you to connect the </p>
+              <p>We help you build your backlinks strategy while respecting Google's vigilance criteria</p>
               <a href="service.html" class="btn btn-primary">Read More</a>
             </div>
           </div>
